--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,49 +1,98 @@
-name: 部署到 Github Pages
+# name: 部署到 Github Pages
 
-on:
-  push:  # 当有推送操作时触发
-    branches: [main]  # 只在 master 分支上触发
-  pull_request:  # 当有拉取请求操作时触发
-    branches: [main]  # 只在 master 分支上触发
+# on:
+  # push:  # 当有推送操作时触发
+    # branches: [main]  # 只在 master 分支上触发
+  # pull_request:  # 当有拉取请求操作时触发
+    # branches: [main]  # 只在 master 分支上触发
 
-jobs:
-  build:  # 构建任务
-    runs-on: ubuntu-latest  # 在最新版的 Ubuntu 上运行
+# jobs:
+  # build:  # 构建任务
+    # runs-on: ubuntu-latest  # 在最新版的 Ubuntu 上运行
 
-    permissions:
-      # 给默认的 GITHUB_TOKEN 写权限，以便提交和推送添加或更改的文件到仓库。
-      contents: write
+    # permissions:
+      # # 给默认的 GITHUB_TOKEN 写权限，以便提交和推送添加或更改的文件到仓库。
+      # contents: write
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4.1.1 # 检出代码
+    # steps:
+      # - name: Checkout
+        # uses: actions/checkout@v4.1.1 # 检出代码
         
-      - name: Cache Hugo resources  # 缓存 Hugo 资源
-        uses: actions/cache@v4.0.0
-        env:
-          cache-name: cache-hugo-resources
-        with:
-          path: resources  # 缓存路径
-          key: ${{ env.cache-name }}  # 缓存的键值
+      # - name: Cache Hugo resources  # 缓存 Hugo 资源
+        # uses: actions/cache@v4.0.0
+        # env:
+          # cache-name: cache-hugo-resources
+        # with:
+          # path: resources  # 缓存路径
+          # key: ${{ env.cache-name }}  # 缓存的键值
 
-      - uses: actions/setup-go@v5.0.0  # 设置 Go 环境
-        with:
-          go-version: "^1.21.6"  # 使用 Go 1.17.0 版本
-      - run: go version  # 显示 Go 版本以验证安装
+      # - uses: actions/setup-go@v5.0.0  # 设置 Go 环境
+        # with:
+          # go-version: "^1.21.6"  # 使用 Go 1.17.0 版本
+      # - run: go version  # 显示 Go 版本以验证安装
 
-      - name: Setup Hugo  # 配置 Hugo
-        uses: peaceiris/actions-hugo@v2.6.0
-        with:
-          hugo-version: "0.122.0"  # 使用最新版的 Hugo
-          extended: true  # 使用扩展版 Hugo
+      # - name: Setup Hugo  # 配置 Hugo
+        # uses: peaceiris/actions-hugo@v2.6.0
+        # with:
+          # hugo-version: "0.122.0"  # 使用最新版的 Hugo
+          # extended: true  # 使用扩展版 Hugo
 
-      - name: Build  # 构建
-        run: hugo --minify --gc  # 执行 Hugo 构建命令，启用压缩和垃圾收集
+      # - name: Build  # 构建
+        # run: hugo --minify --gc  # 执行 Hugo 构建命令，启用压缩和垃圾收集
 
-      - name: Deploy 🚀  # 部署
-        uses: JamesIves/github-pages-deploy-action@v4.5.0
-        with:
-          branch: gh-pages  # 部署到 gh-pages 分支
-          folder: public  # 指定部署的目录
-          clean: true  # 清理部署分支，只保留最新的提交
-          single-commit: true  # 部署时只创建一个提交
+      # - name: Deploy 🚀  # 部署
+        # uses: JamesIves/github-pages-deploy-action@v4.5.0
+        # with:
+          # branch: gh-pages  # 部署到 gh-pages 分支
+          # folder: public  # 指定部署的目录
+          # clean: true  # 清理部署分支，只保留最新的提交
+          # single-commit: true  # 部署时只创建一个提交
+          
+          
+          
+# 将 Hubo 博客构建后部署到 Github Pages
+name: Deploy github-pages
+
+# 在 master 主干分支的任何 push 事件都会触发本 DevOps 工作流水线
+on:
+  push:
+    branches: [ main ]
+
+# 以下是本串行执行工作流的所有组成部分
+jobs:
+  # 这里只定义了一个名为 "deploy" 的多步骤作业
+  build-deploy-hugo-blog:
+    # 将后续的所有工作步骤都运行在最新版的 ubuntu 操作系统上
+    runs-on: ubuntu-latest
+
+    # 本构建和部署作业的所有步骤定义如下
+    steps:
+
+    # Step 1 - Checks-out 你的代码库到 $GITHUB_WORKSPACE
+    - name: Checkout blog code repo
+      uses: actions/checkout@v2 # 这是 Github 官方提供的一个动作模块
+      with:
+          submodules: true  # 同步更新所使用的 Hugo 模板
+          fetch-depth: 0    # 更新到该模板最新的版本
+
+    # Step 2 - 配置最新版本的 Hugo 环境
+    - name: Setup Hugo
+      uses: peaceiris/actions-hugo@v2  # 这是 Github Actions 市场中的一个动作模块
+      with:
+          hugo-version: 'latest'
+
+    # Step 3 - 清理代码库中 public 目录中的内容
+    - name: Clean public directory
+      run: rm -rf public  # 彻底删除这个目录
+
+    # Step 4 - 用最新版本的 Hugo 构建个人博客站点
+    - name: Build blog site
+      run: hugo --minify
+
+
+    # Step 6 - 将构建好的博客站点推送发布到 gh-pages 分支
+    - name: Deploy blog to Github-pages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+          github_token: ${{ secrets.DEPLOY_KEY }}
+          publish_dir: ./public
