--- a/config.yaml
+++ b/config.yaml
@@ -21,9 +21,9 @@ copyright: Broos
 googleAnalytics:
 
 
-# 用于SEO
+# 生成永久链接
 permalinks:
-    post: /p/:slug/
+    post: /post/:slug
     page: /:slug/
 
 params:
