--- a/config.yaml
+++ b/config.yaml
@@ -193,6 +193,7 @@ markup:
         tabWidth: 4
 
 # 自动更新最后修改时间 在文章中设置一个lastmod字段添加一个时间即可
+# enableGitInfo : true
 frontmatter:
   lastmod:
     - :fileModTime
